new proj/src/objects/GE_PW_CMFtoISOCountryName__c.object
<CustomObject>
    <fields>
        <fullName>GE_PW_AML_Name__c</fullName>
        <label>AML Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_CMF_Name__c</fullName>
        <label>CMF Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Country_Name__c</fullName>
        <label>Country Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>GE_HQ_Country__c</referenceTo>
        <relationshipName>Country_Object_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_ISO_Code__c</fullName>
        <label>ISO Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>CMFtoISOCountryName</label>
    <nameField>
        <label>CMFtoISOCountryName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMFtoISOCountryName</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>